# undo

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
docs/: detailed.md
src/: cli.rs  daemon.rs  db.rs  diff.rs  duration.rs  ignore.rs  main.rs  models.rs  restore.rs  retention.rs  snapshots.rs  update.rs  watcher.rs
