[package]
name = "undo"
version = "0.1.6"
edition = "2021"
description = "Filesystem history for your working directory"

[dependencies]
clap = { version = "4", features = ["derive"] }
notify = "6"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
flate2 = "1"
chrono = { version = "0.4", features = ["clock"] }
walkdir = "2"
similar = "2"
signal-hook = "0.3"
dirs = "5"
anyhow = "1"
libc = "0.2"
ignore = "0.4.25"
toml = "0.8"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
